--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -131,14 +131,17 @@
     &__body {
       flex-direction: column;
       width: 100%;
-      height: auto;
+      height: 100%;
       text-align: center;
       margin-left: 0px;
-      padding: 20px 20px;
+      padding: 3% 20px;
     }
-
+    & {
+      min-height: 550px;
+    }
     &__background {
-      min-height: 610px;
+      //min-height: 620px;
+      min-height: 100%;
     }
 
     &__triangle {
