--- a/sass/layout/order.scss
+++ b/sass/layout/order.scss
@@ -69,7 +69,7 @@
 
     &__hint {
       .hint__text {
-        line-height: 40px;
+        line-height: 20px;
       }
     }
   }
